tests/compile-fail/return_type_mismatch.ori
// Test that return type mismatches are detected
// Spec: 06-types.md ยง Type Compatibility
// Design: 03-type-system/01-overview.md ยง Type Checking
//
// A function's body must have a type compatible with the declared return type.

#[compile_fail("type mismatch")]
@test_return_type_mismatch () -> void = run(
    let greet = (name: str) -> int = "Hello, " + name,
    ()
)
